@@ -24,4 +24,3 @@ Dist::Zilla::PluginBundle::Git = 0
 Pod::Weaver::Section::SourceGitHub = 0
 Pod::Weaver::Section::BugsRT = 0
 
-[FakeRelease]
